clean up package.json

--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
-  "name": "simpleRent",
-  "description": "Property management app",
+  "name": "simpleFrontend",
+  "description": "Frontend boiler for rapid development",
   "version": "0.0.1",
-  "contributors": [
-    {
-      "name": "",
-      "email": "",
-      "web": ""
-    }
-  ],
+  "author" : {
+    "name":"Jake Gibson",
+    "email": "jake@j3.io",
+    "url":"http://j3.io"
+  }, 
   "dependencies": {},
   "homepage": "http://simplerent.co",
   "devDependencies": {
     "coffeeify": "^0.7.0",
+    "connect-livereload": "^0.5.0",
     "express": "~3.4.8",
     "gulp": "~3.5.0",
-    "gulp-coffee": "^2.2.0",
     "gulp-coffeeify": "^0.1.2",
     "gulp-concat": "~2.1.7",
     "gulp-jade": "~0.3.0",
     "gulp-livereload": "~0.2.0",
     "gulp-sass": "^1.1.0",
-    "gulp-stylus": "0.0.11",
     "gulp-uglify": "~0.1.0",
     "gulp-util": "~2.2.12",
-    "marked": "~0.3.0",
     "tiny-lr": "0.0.5"
   }
 }
